[package]
name = "mud-server"
version = "0.1.0"
authors = ["Florian Schuetz <fschuetz@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ansi_term = "0.12"
termion = "1.5"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.1.3"
signal-hook = "0.3.13"
config = { version = "0.11.0", features = ["toml"]}
serde_derive = "^1.0.8"
serde = "^1.0.8"
anyhow = "1.0.52"
thiserror = "1.0.30"
console-subscriber = "0.1.0"
tracing = "0.1.29" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
generational-arena = "0.2"
regex = "1"
lazy_static = "1"
